# liminallm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  RATE_LIMIT_SECURITY_AUDIT.md  README.md  SPEC.md  TESTING.md  docker-compose.test.yml  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: tests.yml
deploy/openbsd/: README.md  env.example  httpd.conf  relayd.conf
deploy/openbsd/rc.d/: liminallm
docs/: CONFIGURATION.md  DEPLOYMENT.md  FALSE_POSITIVES_ANALYSIS.md  ISSUES.md  QA_RUNBOOK.md  app_analysis.md  internal_consistency_review.md  issue_audit.md  jax_backend.md  stub_inventory.md
frontend/: admin.html  admin.js  chat.js  index.html  styles.css
jsonschema/: __init__.py
liminallm/: app.py  config.py  content_struct.py  logging.py
liminallm/api/: error_handling.py  routes.py  schemas.py
liminallm/service/: artifact_validation.py  auth.py  bm25.py  clustering.py  config_ops.py  email.py  embeddings.py  errors.py  fs.py  llm.py  model_backend.py  prompt_utils.py  rag.py  router.py  runtime.py  sandbox.py  tokenizer_utils.py  training.py  training_worker.py  voice.py  workflow.py
liminallm/storage/: common.py  cursors.py  errors.py  memory.py  models.py  postgres.py  redis_cache.py
scripts/: bootstrap_admin.py  migrate.sh  run_tests.sh  smoke_test.sh
sql/: 000_base.sql  001_artifacts.sql  002_knowledge.sql  003_preferences.sql  004_runtime_config.sql  005_system_settings.sql
tests/: conftest.py  test_adapter_checksum.py  test_adapter_dual_mode_fixes.py  test_adapter_mode_handling.py  test_app_and_schemas.py  test_artifact_validation.py  test_auth_unit.py  test_bm25.py  test_clustering.py  test_code_review_fixes.py  test_content_struct.py  test_endpoint_rate_limits.py  test_error_envelope.py  test_fs.py  test_idempotency_guard.py  test_idempotency_optional.py  test_integration_admin.py  test_integration_auth.py  test_integration_chat.py  test_knowledge_chunk_schema.py  test_memory_store_user_persistence.py  test_performance.py  test_post_smoke.py  test_postgres_store_unit.py  test_provider_capabilities.py  test_rag.py  test_rate_limit_validation.py  test_router.py  test_sandbox.py  test_session_cache_thread_safety.py  test_storage_methods.py  test_storage_unit.py  test_stub_backend.py  test_training_adapter_modes.py  test_training_service.py  test_workflow_rag_scope.py  test_workflow_retry_timeout.py
