[project]
name = "liminallm"
version = "0.1.0"
description = "Small-kernel chat system with data-driven artifacts"
authors = [{name = "Liminal LM"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "psycopg[binary]>=3.1",
  "redis>=5.0",
  "openai>=1.30"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
