[project]
name = "liminallm"
version = "0.1.0"
description = "Small-kernel chat system with data-driven artifacts"
authors = [{name = "Liminal LM"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.24",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "argon2-cffi>=21.3",
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.2",
  "redis>=5.0",
  "openai>=1.30",
  "structlog>=24.4",
  "prometheus-client>=0.20",
  "jsonschema>=4.22",
  "cryptography>=42.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "bandit>=1.7",
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["liminallm*"]
exclude = ["frontend*", "sql*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["liminallm"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

